--- a/index.html
+++ b/index.html
@@ -7,12 +7,22 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <script type="text/javascript" src="build/enchant.js"></script>
     <script src="jquery-1.10.2.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <script type="text/javascript" src="main.js"></script>
 
     <style type="text/css">
         body {
             margin: 0;
             padding: 0;
+        }
+
+        #enchant-stage {
+            text-align: center;
+            margin-left: auto;
+            margin-right: auto;
+            position:absolute;
+            z-index:10;
+            display:none;
         }
 
 
@@ -29,29 +39,36 @@
     </style>
 </head>
 <body height="100%">
-<table border="0" width="100%" height="100%">
-    <tr>
-        <td width="50%" height="100%">
-            <center>
-            <div id="enchant-stage"></div>
-        </td>
-        <td width="50%" height="100%">
-            <div id="editor" style="height: 512px; width: 100%">set speed 10
+<center>
+    <div id="gameholder" style="width:1024px">
+        <div id="enchant-stage"></div>
+    </div>
+    </center>
+
+    <div class="row">
+        <div class="col-md-12">
+            <ul class="nav nav-tabs">
+                <li role="presentation" class="active"><a href="#">Home</a></li>
+                <li role="presentation"><a href="#">Profile</a></li>
+                <li role="presentation"><a href="#">Messages</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div id="editor" style="height: 512px; width: 100%">set speed 10</div>
+        </div>
+    </div>
+        <div class="row">
+            <div class="col-md-12">
+                <button type="button" onclick="refresh()">Refresh</button>
+                <button type="button" onclick="save()">Save</button>
+                <input id="filename">
+                <br>
+
             </div>
-        </td>
-    </tr>
-    <tr>
-        <td width="50%" height="100%">
-        </td>
-        <td width="50%" height="100%">
-            <button type="button" onclick="refresh()">Refresh</button>
-            <button type="button" onclick="save()">Save</button>
-            <input id="filename">
-            <br>
-            <span id="loading"></span>
-        </td>
-    </tr>
-</table>
+        </div>
+
 <!-- <textarea>hi</textarea> -->
 </body>
 
@@ -66,6 +83,8 @@
    //     textarea.val(editor.getSession().getValue());
    // });
 </script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+
 
 </html>
 
