--- a/index.html
+++ b/index.html
@@ -47,10 +47,7 @@
 
     <div class="row">
         <div class="col-md-12">
-            <ul class="nav nav-tabs">
-                <li role="presentation" class="active"><a href="#">Home</a></li>
-                <li role="presentation"><a href="#">Profile</a></li>
-                <li role="presentation"><a href="#">Messages</a></li>
+            <ul class="nav nav-tabs" id="loading">
             </ul>
         </div>
     </div>
