--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                 <button type="button" onclick="refresh()">Refresh</button>
                 <button type="button" onclick="save()">Save</button>
                 <input id="filename">
+                <button type="button" onclick="deletething()">Delete</button>
                 <br>
 
             </div>
