more images, project structure

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
             <button type="button" onclick="save()">Save</button>
             <input id="filename">
             <button type="button" onclick="deletething()">Delete</button>
+            <button type="button" onclick="newthing()">New</button>
+            <br>
+            <input id="projectname" value="touhou">
+            <button type="button" onclick="loadproject()">Load Project</button>
             <br>
 
         </div>
