--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
             <button type="button" onclick="loadproject()">Load Project</button>
             <br>
 
+            <span id="error"></span>
+
         </div>
     </div>
 
